Ros2_workspace/log/build_2022-05-22_15-21-36/nn_drone_final/stderr.log
  File "/home/xilinx/wrkspace/install/nn_drone_final/lib/python3.8/site-packages/nn_drone_final/nn_node.py", line 108
    def main(args=None):
    ^
SyntaxError: invalid syntax

